scrollbar cursor fixed

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -40,7 +40,7 @@ $theme-hover: $theme-gray-2;
 
 // scrollbar
 $theme-scrollbar: transparent;
-$theme-scrollbar-bar: $theme-white;
+$theme-scrollbar-bar: $theme-gray-7;
 
 // header
 $theme-header: $theme-black-3;
