--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -48,6 +48,7 @@ button {
 }
 
 ::-webkit-scrollbar {
+  cursor: default;
   background-color: $theme-scrollbar;
   height: 0.8rem;
   width: 0.8rem;
@@ -58,6 +59,8 @@ button {
 }
 
 ::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  border-radius: 1rem;
   background-color: $theme-scrollbar-bar;
 }
 
